rulex-lib/tests/testcases/regex-diagnostics/1.txt
#! expect=error
^
-----
ERROR: `^` is not a valid token
HELP: Use `Start` to match the start of the string
SPAN: 0..1